# Computational-Geometry-Code

./: .gitignore  README
ada/convex_hull/: Makefile  main.adb
ada/convex_hull/incremental/: Makefile
ada/geometry/: geometry-primitives.adb  geometry-primitives.ads  geometry.ads
ch1/: convex_hull.py  gpx_hull.py
ch1/tests/: all_tests.py  test_convex_hull.py
ch2/: line_seg_intersect1.py
ch2/tests/: all_tests.py  test_line_seg_intersect.py
ch7/voronoi/: CMakeLists.txt  main.cpp
ch9/delaunay/: CMakeLists.txt  main.cpp
datastructs/: bintree.py  run_tests.py
datastructs/tests/: test_bintree.py
geom/: primitives.py
svgimg/: svgimg.py
